fix too large image on initial touch device load

--- a/web/app/themes/stone-roberts-anew/resources/assets/styles/common/_variables.scss
+++ b/web/app/themes/stone-roberts-anew/resources/assets/styles/common/_variables.scss
@@ -47,7 +47,7 @@ $lg-only: (min: map-get($lg, min), max: 100000px);
 @mixin nonAnimatingMobile {
   .artwork_piece {
     .main-img {
-      max-width: none;
+      max-width: 100vw;
       max-height: none !important;
       position: static !important;
     }
